# polyglot

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  README.md
driver/src/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  VersionInformation.rc.in
lib/include/polyglot/: Polyglot.hpp  Version.hpp.in
lib/include/polyglot/CodeAnalysis/: CodeAnalysis.hpp  ISyntaxTree.hpp  LanguageKind.hpp  SyntaxKinds.hpp
lib/include/polyglot/CodeAnalysis/Core/: CharFlags.hpp  Directive.hpp  DirectiveList.hpp  DirectiveParser.hpp  DirectiveStack.hpp  LanguageKind.hpp  Lexer.hpp  LexerBenchmark.hpp  LexerCache.hpp  Parser.hpp  SyntaxKinds.hpp  SyntaxPool.hpp  SyntaxToken.hpp  TextKeyedCache.hpp  TokenInfo.hpp
lib/include/polyglot/CodeAnalysis/Delphi/: DelphiDirectiveParser.hpp  DelphiLexer.hpp  DelphiLexerFlags.hpp  DelphiLexerStates.hpp  DelphiParser.hpp  DelphiSyntaxFacts.hpp  Directive.hpp  DirectiveStack.hpp
lib/include/polyglot/CodeAnalysis/Syntax/: ISyntaxList.hpp  ISyntaxNode.hpp  ISyntaxToken.hpp  ISyntaxTree.hpp  ISyntaxTrivia.hpp  ISyntaxTriviaList.hpp  SyntaxKinds.hpp
lib/include/polyglot/CodeAnalysis/Text/: TextSpan.hpp
lib/include/polyglot/Core/: Hashing.hpp  LanguageKind.hpp  Types.hpp
lib/include/polyglot/Core/Syntax/: ISyntaxList.hpp  ISyntaxNode.hpp  ISyntaxToken.hpp  ISyntaxTree.hpp  ISyntaxTrivia.hpp  ISyntaxTriviaList.hpp  SyntaxKinds.hpp  SyntaxNodeOrToken.hpp  SyntaxVariant.hpp
lib/include/polyglot/Core/Text/: LinePosition.hpp  LinePositionSpan.hpp  SourceText.hpp  TextSpan.hpp
lib/include/polyglot/Delphi/Syntax/: IDelphiSyntaxTree.hpp
lib/src/: Polyglot.cpp  Version.cpp
lib/src/CodeAnalysis/: CodeAnalysis.cpp
lib/src/CodeAnalysis/Core/: CharFlags.cpp  Directive.cpp  Directive.hpp  DirectiveList.cpp  DirectiveParser.cpp  DirectiveParser.hpp  DirectiveStack.cpp  DirectiveStack.hpp  ISyntaxTree.cpp  LanguageKind.cpp  Lexer.cpp  Lexer.hpp  LexerBenchmark.cpp  LexerCache.cpp  LexerCache.hpp  LexerMode.cpp  LexerMode.hpp  Parser.cpp  Parser.hpp  QuickScanState.cpp  QuickScanState.hpp  SyntaxFactory.cpp  SyntaxFactory.hpp  SyntaxKinds.cpp  SyntaxNodeFlags.cpp  SyntaxNodeFlags.hpp  SyntaxPool.cpp  SyntaxPool.hpp  SyntaxToken.cpp  TextKeyedCache.cpp  TextKeyedCache.hpp  TokenInfo.cpp  TokenInfo.hpp
lib/src/CodeAnalysis/Core/Parser/: CharFlags.cpp  CharFlags.hpp  Directive.cpp  (+25 more)
lib/src/CodeAnalysis/Delphi/: DelphiDirectiveParser.cpp  DelphiDirectiveParser.hpp  DelphiLexer.cpp  DelphiLexer.hpp  DelphiLexerFlags.cpp  DelphiLexerFlags.hpp  DelphiLexerStates.cpp  DelphiLexerStates.hpp  DelphiParser.cpp  DelphiParser.hpp  DelphiSyntaxFactory.cpp  DelphiSyntaxFactory.hpp  DelphiSyntaxFacts.cpp  DelphiSyntaxFacts.hpp  DelphiSyntaxTree.cpp  DelphiSyntaxTree.hpp  Directive.cpp  DirectiveStack.cpp
lib/src/Core/: Hashing.cpp  Hashing.hpp  LanguageKind.cpp  Types.cpp
lib/src/Core/Parser/: CharFlags.cpp  CharFlags.hpp  Directive.cpp  Directive.hpp  DirectiveList.cpp  DirectiveList.hpp  DirectiveParser.cpp  DirectiveParser.hpp  DirectiveStack.cpp  DirectiveStack.hpp  Lexer.cpp  Lexer.hpp  LexerCache.cpp  LexerCache.hpp  LexerMode.cpp  LexerMode.hpp  Parser.cpp  Parser.hpp  QuickScanState.cpp  QuickScanState.hpp  TextKeyedCache.cpp  TextKeyedCache.hpp  TokenInfo.cpp  TokenInfo.hpp
lib/src/Core/Syntax/: ExpressionSyntax.cpp  ExpressionSyntax.hpp  ISyntaxList.cpp  ISyntaxNode.cpp  ISyntaxToken.cpp  ISyntaxTree.cpp  ISyntaxTrivia.cpp  ISyntaxTriviaList.cpp  SyntaxFactory.cpp  SyntaxFactory.hpp  SyntaxFlags.cpp  SyntaxFlags.hpp  SyntaxKinds.cpp  SyntaxList.cpp  SyntaxList.hpp  SyntaxMissingToken.cpp  SyntaxMissingToken.hpp  SyntaxNode.cpp  SyntaxNode.hpp  SyntaxNodeFlags.cpp  SyntaxNodeFlags.hpp  SyntaxNodeOrToken.cpp  SyntaxPool.cpp  SyntaxPool.hpp  SyntaxToken.cpp  SyntaxToken.hpp  SyntaxTree.cpp  SyntaxTree.hpp  SyntaxTrivia.cpp  SyntaxTrivia.hpp  SyntaxTriviaList.cpp  SyntaxTriviaList.hpp  SyntaxVariant.cpp
lib/src/Core/Text/: LinePosition.cpp  LinePosition.hpp  LinePositionSpan.cpp  LinePositionSpan.hpp  SourceText.cpp  SourceText.hpp  TextSpan.cpp  TextUtilities.cpp  TextUtilities.hpp  TextWindow.cpp  TextWindow.hpp
lib/src/Delphi/Parser/: DelphiDirectiveParser.cpp  DelphiDirectiveParser.hpp  DelphiLexer.cpp  DelphiLexer.hpp  DelphiLexerFlags.cpp  DelphiLexerFlags.hpp  DelphiLexerStates.cpp  DelphiLexerStates.hpp  DelphiParser.cpp  DelphiParser.hpp  DelphiSyntaxFacts.cpp  DelphiSyntaxFacts.hpp  Precedence.hpp
lib/src/Delphi/Syntax/: DelphiAssemblerStatementSyntax.cpp  DelphiAssemblerStatementSyntax.hpp  DelphiBracketArgumentListSyntax.cpp  DelphiBracketArgumentListSyntax.hpp  DelphiBreakStatementSyntax.cpp  DelphiBreakStatementSyntax.hpp  DelphiCaseElseClauseSyntax.cpp  DelphiCaseElseClauseSyntax.hpp  DelphiCaseItemListSyntax.cpp  DelphiCaseItemListSyntax.hpp  DelphiCaseItemSyntax.cpp  DelphiCaseItemSyntax.hpp  DelphiCaseLabelListSyntax.cpp  DelphiCaseLabelListSyntax.hpp  DelphiCaseLabelSyntax.cpp  DelphiCaseLabelSyntax.hpp  DelphiCaseStatementSyntax.cpp  DelphiCaseStatementSyntax.hpp  DelphiCompilationUnitSyntax.cpp  DelphiCompilationUnitSyntax.hpp  DelphiCompoundStatementSyntax.cpp  DelphiCompoundStatementSyntax.hpp  DelphiContinueStatementSyntax.cpp  DelphiContinueStatementSyntax.hpp  DelphiElseClauseSyntax.cpp  DelphiElseClauseSyntax.hpp  DelphiEndOfModuleDeclarationSyntax.cpp  DelphiEndOfModuleDeclarationSyntax.hpp  DelphiEndOfModuleExpressionSyntax.cpp  DelphiEndOfModuleExpressionSyntax.hpp  DelphiEndOfModuleSyntax.cpp  DelphiEndOfModuleSyntax.hpp  DelphiExceptClauseSyntax.cpp  DelphiExceptClauseSyntax.hpp  DelphiExceptionBlockSyntax.cpp  DelphiExceptionBlockSyntax.hpp  DelphiExceptionHandlerBlockSyntax.cpp  DelphiExceptionHandlerBlockSyntax.hpp  DelphiExceptionStatementBlockSyntax.cpp  DelphiExceptionStatementBlockSyntax.hpp  (+81 more)
sandbox/src/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  SyntaxPropertiesWidget.cpp  SyntaxPropertiesWidget.hpp  SyntaxTreeItem.cpp  SyntaxTreeItem.hpp  SyntaxTreeModel.cpp  SyntaxTreeModel.hpp  SyntaxTreeWidget.cpp  SyntaxTreeWidget.hpp  SyntaxVisualizationDockWidget.cpp  SyntaxVisualizationDockWidget.hpp  main.cpp
(+506 files in other folders)
